--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
+  text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image:url(./images/city.jpg);
+  background-repeat: no-repeat;
+  background-size: 1920px 2000px;
+  z-index: -1;
 }
 
 code {
